--- a/language-tabs.css
+++ b/language-tabs.css
@@ -1,4 +1,3 @@
-
 .prism-code {
   font-size: 1.5rem;
   padding: 1rem;
@@ -25,8 +24,8 @@ li > code {
 .gatsby-highlight {
   font-size: 1rem;
   position: relative;
-  -webkit-overflow-scrolling: touch;
-  overflow: auto;
+  /* -webkit-overflow-scrolling: touch; */
+  /* overflow: auto; */
 }
 
 gatsby-highlight > code[class*="language-"],
@@ -61,7 +60,8 @@ gatsby-highlight > code[class*="language-"],
   left: -2px;
 }
 
-code[class*="language-"], pre[class*="language-"] {
-    white-space: normal !important;
-    word-break: break-word !important;
+code[class*="language-"],
+pre[class*="language-"] {
+  white-space: pre-wrap;
+  word-break: break-word !important;
 }
