--- a/language-tabs.css
+++ b/language-tabs.css
@@ -1,6 +1,5 @@
 .prism-code {
-  /* font-size: 1.5rem;; */
-  font-size: 1.25rem;
+  /* font-size: 1.25rem; */
   padding: 1.3rem;
   margin: 1rem 0;
   border-radius: 10px;
@@ -9,6 +8,7 @@
   max-width: 100%;
   overflow-x: auto;
   box-sizing: border-box;
+  font-size: 1.1rem;
 }
 
 .token {
@@ -110,7 +110,8 @@ pre[class*="language-"] {
     font-size: 0.7rem;
   }
   .prism-code {
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
+    font-size: 1rem;
     padding: 1.05rem;
   }
 }
